name:          vooj
version:       0.1
license:       GPL-2
author:        Sam Griffin
maintainer:    Sam Griffin
synopsis:      visual language
description:   Pure Functional Visual Language, with editor
category:      Languages
stability:     Experimental
cabal-version: >= 1.6
build-type:    Simple

Executable  vooj
    Main-is:          Main.hs
    hs-source-dirs:   src
    Build-Depends:    base >= 4
                 ,    SDL > 0.4.0
                 ,    containers >= 0.4.2.1
                 ,    directory >= 1.1.0.2
                 
