name:          vooj
version:       0.1
license:       GPL-2
author:        Sam Griffin
maintainer:    Sam Griffin
synopsis:      visual language
description:   Pure Functional Visual Language, with editor
category:      Languages
stability:     Experimental
cabal-version: >= 1.6
build-type:    Simple
data-files:    data/functions/*.bmp

Executable  vooj
    Main-is:          Main.hs
    hs-source-dirs:   src
    Build-Depends:    base >= 4
                 ,    SDL > 0.4.0
                 ,    containers >= 0.4.2.1
                 ,    directory >= 1.1.0.2
                 ,    SDL-gfx >= 0.6.0
                 ,    stm >= 2.2
                 ,    ghc-prim
                 ,    cereal >= 0.3.5.1
                 ,    bytestring >= 0.9.2.1                 
